--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.2",
+    "crypto-js": "^4.1.1",
     "rxjs": "~7.5.0",
+    "secure-web-storage": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -31,6 +33,7 @@
     "@angular-devkit/build-angular": "^14.1.3",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
