--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --port 4209 -o",
     "host": "ng serve --port 4209 -o --host 0.0.0.0",
     "build": "ng build",
+    "prod": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
